--- a/keijiban/views/posts.ejs
+++ b/keijiban/views/posts.ejs
@@ -26,7 +26,21 @@
         </nav>
     </header>
     <div>
-    ここは投稿一覧です。
+            <% if (posts) { %>
+                <table>
+                <% posts.forEach(function(value, key) { %>
+                        <tr>
+                            <!-- 参照したサイトhttps://qiita.com/mazeltov7/items/306cf93af50c0810c9b4 -->
+                            投稿ID：<%= value.id %><br>
+                            タイトル：<%= value.title %><br>
+                            コンテンツ：<%= value.content %><br>
+                            投稿者ID：<%= value.userId %><br>
+                            投稿者：<%= value.name %><br>
+                            <a>ここにいいねが出力される予定</a><br>
+                        </tr>
+                <% }); %>
+                </table>
+            <% } %>
     </div>
 </body>
 </html>
